# backend/api/android_web_api.go
@@ -562,3 +562,34 @@ func AndroidWebStatisticSigningCost(c *gin.Context) {
 	log.Info(ctx, "response data for statistic job signing cost", rsp)
 	util.ResponseData(c, rsp)
 }
+
+// AndroidWebStatisticSigningPassRate 获取应用的 Android 类型签名通过率统计信息。
+//
+//	@Summary	获获取应用的 Android 类型签名通过率统计信息
+//	@Tags		Android-WebAPI
+//	@Accept		application/x-www-form-urlencoded
+//	@Produce	application/json
+//	@Param		Date	header		string											true	"请求日期"	example(Mon, 02 Jan 2006 15:04:05 GMT)
+//	@Param		Cookie	header		string											true	"会话凭据"	example(csms_user=; csms_seesion=)
+//	@Param		_		query		protocol.AndroidWebStatisticSigningPassRateReq	true	"请求参数"
+//	@Response	200		{object}	util.Response[protocol.AndroidWebStatisticSigningPassRateRsp]
+//	@Router		/web/android/statisticSigningPassRate [get]
+func AndroidWebStatisticSigningPassRate(c *gin.Context) {
+	ctx := c.Request.Context()
+	var req protocol.AndroidWebStatisticSigningPassRateReq
+	err := c.ShouldBind(&req)
+	if err != nil {
+		log.Warn(ctx, "failed to parse request parameters", err)
+		util.ResponseError(c, err)
+		return
+	}
+	log.Info(ctx, "request parameters for statistic job signing pass rate", &req)
+	rsp, err := service.AndroidWebStatisticSigningPassRate(ctx, &req)
+	if err != nil {
+		log.Warn(ctx, "failed to statistic job signing pass rate", err, &req)
+		util.ResponseError(c, err)
+		return
+	}
+	log.Info(ctx, "response data for statistic job signing pass rate", rsp)
+	util.ResponseData(c, rsp)
+}
